--- a/mod.conf
+++ b/mod.conf
@@ -1,6 +1,6 @@
 name = x_enchanting
 description = Adds Enchanting Mechanics and API.
 depends =
-optional_depends = xdecor
+optional_depends = xdecor, item_drop
 supported_games = minetest_game
 min_minetest_version = 5.4
